--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     const FORM_CONFIG = {
         // [A] 您的多维表格收集链接 (不带参数的基础链接)
         // 示例: "https://doc.weixin.qq.com/form/collect/DjkA..."
-        url: "https://doc.weixin.qq.com/smartsheet/s3_AIoAcQYTAOQCNWW7s1o53TgiKZEF8?scode=AJEAXgcSAA460MvpEuAIoAcQYTAOQ&tab=XQrQgc&viewId=vxt5DO", 
+        url: "https://doc.weixin.qq.com/smartsheet/form/1_wpkV4SDgAAcl3du5JJI0jcTfUAhk18fQ_a151f3", 
 
         // [B] 表格中各字段对应的“参数名/ID”
         // 您需要去企业微信/腾讯文档的“预填充”设置里查找这些 key
@@ -132,3 +132,4 @@
 </script>
 </body>
 </html>
+
